--- a/Components/Pages/RomConfig.razor
+++ b/Components/Pages/RomConfig.razor
@@ -8,9 +8,20 @@
 @using System.Net.Http
 @using System.IO.Compression
 @using NextUI_Setup_Wizard.Resources
+@using NextUI_Setup_Wizard.Components.Shared
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Navigation
 @inject HttpClient Http
+@implements IDisposable
+
+<!-- ADB Command Window (only show in ADB mode) -->
+@if (isAdbMode)
+{
+    <AdbCommandWindow CommandLogger="@adbCommandLogger" />
+}
+
+<!-- Floating ADB Log Button -->
+<AdbLogButton CommandLogger="@adbCommandLogger" IsAdbMode="@isAdbMode" />
 
 <div class="rom-container">
     <h3 data-ref="page-header">ROM Configuration@(isAdbMode ? " (ADB Mode)" : "")</h3>
@@ -711,6 +722,7 @@
     private AdbFileOperations? adbFileOps;
     private AdbDevice? selectedDevice;
     private DeviceStorageInfo? deviceStorage;
+    private AdbCommandLogger adbCommandLogger = new();
 
     // Transfer-related properties (for ADB mode)
     private bool isTransferring = false;
@@ -775,6 +787,9 @@
             if (platformToolsExtractor.IsAdbAvailable())
             {
                 adbService = new AdbService(platformToolsExtractor.AdbExecutablePath);
+
+                // Subscribe to command logging
+                adbCommandLogger.SubscribeToAdbService(adbService);
 
                 // Try to get first online device
                 var devices = await adbService.GetDevicesAsync();
@@ -1228,6 +1243,15 @@
                 var pathSystemName = !string.IsNullOrEmpty(RomPathSystemName) ? RomPathSystemName : SystemName;
                 return $"{AdbFileOperations.NEXTUI_BASE_PATH}/Roms/{pathSystemName} ({SystemCode})";
             }
+        }
+    }
+
+    public void Dispose()
+    {
+        // Clean up ADB command logger subscription
+        if (adbService != null)
+        {
+            adbCommandLogger?.UnsubscribeFromAdbService(adbService);
         }
     }
 }
